Bug 80467 - UI: "Element anchor" appears RTL aligned, with bad bidi braces in Hebrew UI version and possibly other RTL languages.
Summary: UI: "Element anchor" appears RTL aligned, with bad bidi braces in Hebrew UI v...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
4.1.6.2 release
Hardware: Other All
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: BSA target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: RTL-UI
  Show dependency treegraph
 
Reported: 2014-06-24 09:35 UTC by Avihay
Modified: 2023-08-11 11:26 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
An image showing the English version on top vs the Hebrew version on bottom. the issue is easy to spot. (89.47 KB, image/png)
2014-06-24 09:35 UTC, Avihay
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Avihay 2014-06-24 09:35:04 UTC
Created attachment 101659 [details]
An image showing the English version on top vs the Hebrew version on bottom. the issue is easy to spot.

Problem description: 
"Element dock" appears RTL aligned, with bad bidi braces in the Hebrew UI version and possibly other RTL languages.
Steps to reproduce:
1. Open the "Math editor", or open sheets/writer and Insert->object->formula
2. go to the brackets, samples or any other category with formula that contains brackets in "Element dock"

Current behavior:
In the "Element dock" - 
Brackets direction is reversed, and most of the <?> elements are misspositioned (before a symbol, rather then after), also some symbols are mis-spaced.
In other the formulas are treated as if they are ment to be written RTL instead of LTR. It looks bad.

Expected behavior:
In the "Element anchor" - everything looks like the english version, possibly right aligned.
              
Operating System: Windows 7
Version: 4.2.4.2 release
Comment 1 Yousuf Philips (jay) (retired) 2015-02-25 23:57:30 UTC
Hello Avihay,

Thank you for submitting the bug. I can confirm that the bug is available in 4.4.0 on Windows 7 in Arabic and 4.3 daily on Linux.
Comment 2 Yousuf Philips (jay) (retired) 2015-02-25 23:58:01 UTC
Sorry used the wrong meta bug. :D
Comment 3 Yousuf Philips (jay) (retired) 2015-02-26 00:05:21 UTC
The sidebar was added in 4.1 and i can confirm the problem is in 4.1.6.
Comment 4 tommy27 2016-04-16 07:24:29 UTC Comment hidden (noise)
Comment 5 Omer Zak 2017-11-04 20:16:10 UTC
Still happens in:

Version: 5.4.2.2.0+
Build ID: 1:5.4.2-3~bpo9+1
CPU threads: 8; OS: Linux 4.9; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.utf8); Calc: group

OS: Debian 64bit Stretch (Debian 9.2, with some backported packages)

I tested using Hebrew UI.

To clarify a step to reproduce: open a new document using File > New > Formula (or, rather, the equivalent Hebrew translation).
Comment 6 QA Administrators 2018-11-05 03:43:26 UTC Comment hidden (noise)
Comment 7 QA Administrators 2021-12-28 07:00:44 UTC Comment hidden (noise)
Comment 8 Eyal Rozenberg 2022-09-14 18:00:38 UTC
Seeing this with build:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 6c81a09e3ef239a2d7a991d00fe3620a67298b99
CPU threads: 4; OS: Linux 5.18; UI render: default; VCL: gtk3
Locale: en-IL (en_IL); UI: he-IL

but - inconsistently. First, the examples seem laid out properly for me, despite the rest of the elements having their direction RTL'ed. Also, after seeing the what Avishay described, when I resize the window, and re-dock the undocked formula elements region - the rendering seems to be corrected, i.e. an LTRed equation; and the font size which seemed smaller than it should be (not something Avishay described) grows to match the text next to the formula I've created.
Comment 9 Commit Notification 2023-08-10 10:24:32 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca78e610e1a4d20021d204c3d7857e6edb591fa6

tdf#80467: Fix math rendering in elements dock with RTL UI

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Eyal Rozenberg 2023-08-10 17:46:29 UTC
(In reply to Commit Notification from comment #9)

Thanks Khaaled! :-)
Comment 11 Commit Notification 2023-08-11 11:26:52 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/ec7065bafc0a805b03a2b4d5522026f829c25522

tdf#80467: Fix math rendering in elements dock with RTL UI

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.