tdf#80467: Fix math rendering in elements dock with RTL UI

Make sure to disable RTL on the OutputDevice, otherwise the math will be
rendered right-to-left without even mirroring the parenthesis.

Change-Id: Iea43dbc0d7efe914120d5cc1605522254344b4fc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155538
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
(cherry picked from commit f681d37d7aab768b507ea48d34a985b8dc49391a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155486
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>